# Player money are now synced
#(not working) Added 'Set Money' button
# Player list now scrollable with arrow keys
# Input box now can be accepted with 'Enter' key
# Message box can be accepted with 'Enter' and canceled with 'n' keys
# Completely rewritten spectator
# Made the ip2country database be 2.5 times smaller without any loss of data, which also pretty much increased the loading speed
# Fixed 'give vehicle' code being broken with vehicles on the same name
# Fixed 'Select' button in interior window


--- This log lacks changes in version 1.3 ---

-------------------------------------
-- Version 1.3.1 --
-------------------------------------

# Added custom Ban duration when banning player via GUI
# Added ability to Delete resource in 'Resoruces' tab (new ACL right 'command.delete')
# Added ability to stop all resources in 'Resources' tab
# Added setting 'removeHex' which removes HEX codes from players nicks when displayed or sent in message (default is set to true)
# More informatios about resources now showing in 'Resources' tab



-------------------------------------
	BUGS
-------------------------------------

* 
* 
* 



---------------------------------------------------------

	               TO BE TESTED  
(Probably already tested at least once, re-test if bored.)

---------------------------------------------------------

* Fixed buttons lock up caused by messages list global variable matching message box
* Fixed vehicles being not warped to the right dimension and interior
* Fixed interior and dimension not being applied to warped player
* Fixed hardcoded weathers count
* Added console commands support (still has to be hardly tested)
* Fixed errors and warnings when kicking/banning
* Added Serial bans support
* Vehicle change now warps previous passengers into the new vehicle
* All vehicle change messages will now be sent to passengers
* Player can now be switched with arrow keys in spectator
* Fixed slap button in spectator

